<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	
    <TextView
        android:id="@+id/tvhome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/sh_tvhome"
        android:textAppearance="?android:attr/textAppearanceLarge" />
        <LinearLayout
            android:id="@+id/linlay1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvhome"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp" >

            <Button
                android:id="@+id/startbutton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_start"
                android:text="@string/sh_startbutton" />

            <Button
                android:id="@+id/stopbutton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_stop"
                android:text="@string/sh_stopbutton" />

            <Button
                android:id="@+id/tempbutton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_temperature_trans"
                android:text="@string/sh_tempbutton" />
            
        </LinearLayout>
	
        <LinearLayout
            android:id="@+id/linlay2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linlay1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp" >

            <Button
                android:id="@+id/summerbutton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_summer"
                android:text="@string/sh_summerbutton" />

            <Button
                android:id="@+id/winterbutton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_winter"
                android:text="@string/sh_winterbutton" />

            <Button
                android:id="@+id/statusbutton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_help"
                android:text="@string/sh_statusbutton" />
            
        </LinearLayout>
        
	<Button
	     android:id="@+id/helpbutton"
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content"
	     android:layout_above="@id/exitbutton"
	     android:text="@string/sh_helpbutton" 
	     />


    <TextView
        android:id="@+id/tvinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/footer" />
    
    <Button
	     android:id="@+id/exitbutton"
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content"
	     android:layout_above="@id/tvinfo"
	     android:text="@string/com_exitbutton"
	     />

    <ProgressBar
        android:id="@+id/mainPB"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvhome"
        android:layout_centerHorizontal="true" />



</RelativeLayout>